# scikit-sundae

./: CHANGELOG.md  README.md  noxfile.py  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  release.yml
docs/source/: conf.py
docs/source/_static/: switcher.json
docs/source/development/: code_of_conduct.rst  code_style_and_linting.rst  development_environments.rst  issues_and_features.rst  patterns_and_conventions.rst  project_layout.rst  project_overview.rst  tests_and_coverage.rst  version_control.rst
docs/source/examples/: robertson.ipynb  van_der_pol.ipynb
docs/source/user_guide/: dae_overview.rst  event_functions.rst  explicit_jacobians.rst  installation.rst  linear_solvers.rst  what_is_sksundae.rst
environments/: ci_environment.yml  rtd_environment.yml
scripts/: version_checker.py
src/sksundae/: __init__.py  _cy_common.pxd  _cy_common.pyx  _cy_cvode.pyx  _cy_ida.pyx  c_cvode.pxd  c_ida.pxd  jacband.py  utils.py
src/sksundae/cvode/: _jactimes.py  _precond.py  _solver.py
src/sksundae/ida/: _jactimes.py  _precond.py  _solver.py
tests/: test_cvode.py  test_cvode_sparse.py  test_ida.py  test_ida_sparse.py
