# pyproject.toml

[build-system]
requires = ["setuptools", "cython", "numpy", "packaging"]
build-backend = "setuptools.build_meta"

[project]
name = "scikit-sundae"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10,<3.15"
license = "BSD-3-Clause"
license-files = ["LICENSE*"]
description = "Python bindings to SUNDIALS differential algebraic equation solvers."
keywords = ["sundials", "dae", "ode", "integrator", "ivp", "cvode", "ida"]
authors = [
    { name = "Corey R. Randall" },
    { email = "corey.r.randall@gmail.com" },
]
maintainers = [
    { name = "Corey R. Randall" },
    { email = "corey.r.randall@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["numpy", "scipy"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "sksundae.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 80
exclude = ["build", "docs", "images", "reports", "C_programs"]

[tool.ruff.lint]
preview = true
select = [
    "E",  # All pycodestyle errors
    "W",  # All pycodestyle warnings
    "F",  # All pyflakes errors
    "B",  # All flake8-bugbear checks
    "D",  # All pydocstyle checks
]
extend-select = [
    "E302", "E305",  # Expected blank lines (requires preview=true, above)
]
ignore = [
    "B007", "B009", "B010", "B028", "B905",
    "D1", "D203", "D205", "D212", "D400", "D401", "D415",
    "E201", "E202", "E226", "E241", "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["D"]

[project.optional-dependencies]
docs = [
    "sphinx",
    "myst-nb",
    "matplotlib",
    "sphinx-design",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "pydata-sphinx-theme",
]
tests = [
    "pandas",
    "pytest",
    "pytest-cov",
    "pytest-html",
    "pytest-xdist",
]
dev = [
    "nox",
    "ruff",
    "codespell",
    "genbadge[all]",
    "scikit-sundae[docs,tests]",
]

[project.urls]
Homepage = "https://github.com/NatLabRockies/scikit-sundae"
Documentation = "https://scikit-sundae.readthedocs.io/"
Repository = "https://github.com/NatLabRockies/scikit-sundae"
Issues = "https://github.com/NatLabRockies/scikit-sundae/issues"
